# libwm

./: .clang-format  DEPENDS  README.md  generate-command-parser.pl  meson.build  meson_options.txt
include/: all.h  con.h  config_directives.h  configuration.h  data.h  handlers.h  ipc.h  libmwm.h  load_layout.h  main.h  manage.h  move.h  mwm-atoms_NET_SUPPORTED.xmacro.h  randr.h  render.h  resize.h  scratchpad.h  sighandler.h  sync.h  tree.h  window.h  workspace.h  x.h  xcursor.h  yajl_utils.h
include/mwm/: ipc.h
libmwm/: README  font.c  format_placeholders.c  get_colorpixel.c  get_visualtype.c  ipc_connect.c  is_background_set.c  nonblock.c  resolve_tilde.c  safewrappers.c  string.c  strndup.c
libmwm/include/: assignments.h  atoms.h  bindings.h  commands_parser.h  con.h  config_directives.h  config_parser.h  data.h  drag.h  ewmh.h  fake_outputs.h  floating.h  gaps.h  libmwm.h  mwm-atoms_rest.xmacro.h  mwm.h  output.h  regex.h  scratchpad.h  shmlog.h  startup.h  state.h  tiling_drag.h  util.h  window.h  x.h  xcb.h
libmwm/src/: assignments.c  atoms.c  bindings.c  boolstr.c  click.c  commands_parser.c  con.c  config.c  config_directives.c  config_parser.c  create_socket.c  dpi.c  drag.c  draw_util.c  ewmh.c  fake_configure_notify.c  fake_outputs.c  floating.c  font.c  g_utf8_make_valid.c  gaps.c  get_colorpixel.c  get_config_path.c  get_exe_path.c  get_mod_mask.c  get_process_filename.c  handlers.c  ipc.c  ipc_recv_message.c  ipc_send_message.c  is_debug_build.c  key_press.c  load_layout.c  log.c  manage.c  match.c  mkdirp.c  move.c  output.c  path_exists.c  (+20 more)
meson/: meson-dist-script  meson-install-mwm-with-shmlog
mwm-bar/include/: child.h  common.h  configuration.h  ipc.h  mode.h  outputs.h  parse_json_header.h  trayclients.h  util.h  workspaces.h  xcb.h  xcb_atoms.def
mwm-bar/src/: child.c  config.c  ipc.c  main.c  mode.c  outputs.c  parse_json_header.c  workspaces.c  xcb.c
mwm-config-wizard/: main.c  xcb.h
mwm-dump-log/: main.c
mwm-input/: main.c  mwm-input.h
mwm-msg/: main.c
mwm-nagbar/: main.c  mwm-nagbar-atoms.xmacro.h
mwm/include/: all.h  bindings.h  commands.h  display_version.h  drag.h  ewmh.h  gaps.h  key_press.h  match.h  mwm.h  output.h  restore_layout.h  tiling_drag.h
mwm/src/: bindings.c  click.c  commands.c  commands_parser.c  con.c  config_directives.c  config_parser.c  drag.c  fake_outputs.c  floating.c  handlers.c  ipc.c  main.c  match.c  render.c  restore_layout.c  sighandler.c  startup.c  tiling_drag.c  tree.c  util.c  version.c  window.c  workspace.c  x.c
parser-specs/: commands.spec  config.spec
share/xsessions/: mwm-with-shmlog.desktop  mwm.desktop
src/: assignments.c  bindings.c  click.c  commands.c  con.c  config.c  config_directives.c  display_version.c  ewmh.c  handlers.c  ipc.c  log.c  main.c  manage.c  match.c  randr.c  render.c  restore_layout.c  scratchpad.c  sighandler.c  startup.c  sync.c  tiling_drag.c  tree.c  util.c  workspace.c  x.c
